--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8888
+
 spring:
   application:
     name: config-service
@@ -8,3 +9,4 @@ spring:
       server:
         git:
           uri: file:///Users/huiseongshin/Project/BackEnd/msa-ecoomerce/git-local-repo
+          default-label: master
