add: spring cloud bus rabbit mq 연동

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: config-service
+
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+
   cloud:
     config:
       server:
@@ -16,3 +23,9 @@ spring:
           default-label: master
   profiles:
     active: native
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
+
